@@ -8,6 +8,7 @@
 #ifndef _FILES_
 #define _FILES_
 
+void parseargs(char* filepath,int datacnt,args* dataptr);
 bool openFile(const gchar *filepath,int linenumber,bool warn);
 bool saveFile(GtkWidget* widget,gpointer data);
 void newFile(GtkWidget* widget,gpointer data);
